--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,6 +9,8 @@ services:
       MONGO_INITDB_ROOT_PASSWORD: rootpassword
     volumes:
       - mongodbdata:/data/db
+    ports:
+      - "27017:27017"
   api:
     build: .
     ports:
